# LocalTranslateApp

./: Cargo.toml  README.md
src/: main.rs
src/desktop/: app.rs  mod.rs
src/translate/: mod.rs  translator.rs
